--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/adarsh-technocrat/watch-anime-streamlink-package/issues"
   },
-  "homepage": "https://github.com/adarsh-technocrat/watch-anime-streamlink-package#readme"
+  "homepage": "https://github.com/adarsh-technocrat/watch-anime-streamlink-package#readme",
+  "dependencies": {
+    "axios": "^0.26.0",
+    "cheerio": "^1.0.0-rc.10",
+    "nodemon": "^2.0.15"
+  }
 }
